// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatCssRule > formats a single rule 1`] = `
".selector {
	color:red;
}
"
`;

exports[`formatCssRule > formats multiple rules 1`] = `
".selector {
	color:red;
	font-size:2rem;
	display:block;
}
"
`;
